--- a/rest_sim/strip_07.in
+++ b/rest_sim/strip_07.in
@@ -1,9 +1,4 @@
-trajin 07_prod.nc
-autoimage
-strip :WAT,Cl-,Na+ parmout gb1-ntaco_dry.prmtop
-trajout 07_prod_dry.nc
-go
-quit
+parm gb1-ntaco_solv.prmtop
 trajin 07_prod.nc
 autoimage
 strip :WAT,Cl-,Na+ parmout gb1-ntaco_dry.prmtop
