--- a/rest_sim/07_prod.in
+++ b/rest_sim/07_prod.in
@@ -38,12 +38,12 @@ PCS Restrainted 20 ns NPT production using Langevin thermostat and MC barostat
 ! This essentially starts the nmr restraints after the first step
 &wt
   type      = "REST",
-  !istep1    = 0,
-  !istep2    = 1,
-  !value1    = 0,
-  !value2    = 1.0,
+  istep1    = 0,
+  istep2    = 1,
+  value1    = 0,
+  value2    = 1.0,
   ! since starting from rest min, use restraints the whole time
-  value1    = 1.0,
+  !value1    = 1.0,
 &end
 &wt
   type      = "END",
