--- a/gb1-ntaco/adj_rest_min_equil/05_prod.in
+++ b/gb1-ntaco/adj_rest_min_equil/05_prod.in
@@ -14,6 +14,9 @@ PCS Restrainted 1 ns NPT production using Langevin thermostat and MC barostat
   nmropt    = 2,
   ! use sum of squares optimization of errors
   ipnlty    = 2,
+  ! minimize the sum of the absolute values of the errors; 
+  ! this is akin to minimizing the crystallographic R-factor (default)
+  !ipnlty    = 1,
   ntr       = 0,
   ntb       = 2,
   ntp       = 1,
@@ -34,7 +37,7 @@ PCS Restrainted 1 ns NPT production using Langevin thermostat and MC barostat
   ioutfm    = 1,
   ntwx      = 500,
   iwrap     = 1,
-&end
+/
 ! This essentially starts the nmr restraints after the first step
 &wt
   type      = "REST",
@@ -44,9 +47,9 @@ PCS Restrainted 1 ns NPT production using Langevin thermostat and MC barostat
   value2    = 1.0,
   ! since starting from rest min, use restraints the whole time
   !value1    = 1.0,
-&end
+/
 &wt
   type      = "END",
-&end
-PCSHIFT     = pcs.in
+/
+PCSHIFT     = ./pcs.in
 LISTOUT     = POUT
