--- a/gb1-ntaco/test_adj_rest_md/05_prod.in
+++ b/gb1-ntaco/test_adj_rest_md/05_prod.in
@@ -51,5 +51,5 @@ PCS Restrainted 1 ns NPT production using Langevin thermostat and MC barostat
 &wt
   type      = "END",
 &end
-PCSHIFT     = ./pcs-idaco.in
+PCSHIFT     = ./pcs-ntaco.in
 LISTOUT     = POUT
